# aesc-cli

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.multi  Dockerfile.workspace-patch  LEGAL.md  Makefile  README.md  SECURITY.md  config.demo.json  config.example.json  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.profiles.yml  docker-compose.root.yml  install.sh  package-lock.json  pyproject.toml  pyrightconfig.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-publish.yml  docs-deploy.yml  test.yml
benchmarks/: ARCHITECTURE.md  BENCHMARK_SPEC_TEMPLATE.md  DOCKER.md  NOTES.md  README.md  REDTEAM.md  RUN_PROTOCOL.md  SCORING.md  TASK_SPEC.md  ashbench.py  docker_run_suite.sh  docker_run_task.sh
benchmarks/labs/: README.md  reset-labs.sh
benchmarks/labs/diag_console/: Dockerfile  README.md  server.py
benchmarks/labs/invoice_api/: README.md  server.py
benchmarks/labs/notes_app/: README.md  server.py
benchmarks/labs/support_portal/: Dockerfile  README.md  (+1 more)
benchmarks/tasks/: README.md
benchmarks/templates/: task.yaml
docs/: DEPLOYMENT_GUIDE.md  configuration.mdx  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/advanced/: architecture.mdx  contributing.mdx  development.mdx
docs/api-reference/: agents.mdx  cli-commands.mdx  configuration-file.mdx  overview.mdx  tools.mdx
docs/designs/: 001-approval-ux-fix.md  002-subagent-visibility.md
docs/features/: kali-docs-search.mdx  kali-tools.mdx  risk-based-approvals.mdx
docs/guides/: docker-usage.mdx  llm-providers.mdx  security-best-practices.mdx  troubleshooting.mdx
patches/: litellm_global_location.py
src/aesc/: agentspec.py  app.py  audit.py  cli.py  config.py  constant.py  exception.py  llm.py  metadata.py  session.py  share.py
tests/: conftest.py  test_agent_spec.py  test_approval.py  test_approval_panel.py  test_approval_ux.py  test_bash.py  test_changelog.py  test_compaction.py  test_config.py  test_context.py  test_default_agent.py  test_fetch_url.py  test_file_completer.py  test_glob.py  test_grep.py  test_keyboard.py  test_load_agent.py  test_message_utils.py  test_metacmd.py  test_patch_file.py  test_pyinstaller_utils.py  test_read_file.py  test_result_builder.py  test_risk.py  test_risk_assessment.py  test_session.py  test_soul_message.py  test_str_replace_file.py  test_subagent_visibility.py  test_task_subagents.py  test_tool_descriptions.py  test_tool_schemas.py  test_utils_path.py  test_visualize_textual.py  test_web_tool_approvals.py  test_wire_message.py  test_write_file.py
(+185 files in other folders)
