[project]
name = "aesc"
version = "0.1.0"
description = "aesc - AI-powered security agent for penetration testing"
readme = "README.md"
authors = [{name = "akæli", email = "dev@xn--akli-woa.com"}]
license = {text = "Apache-2.0"}
homepage = "https://xn--akli-woa.com"
repository = "https://github.com/akaeli-aesc/aesc-cli"
keywords = ["security", "pentesting", "ai", "kali", "agent", "ethical-hacking"]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]
dependencies = [
    "agent-client-protocol==0.6.3",
    "aiofiles==25.1.0",
    "aiohttp==3.13.2",
    "asyncssh>=2.14.0",
    "typer==0.20.0",
    "openai>=2.8.0",
    "anthropic>=0.45.0",
    "loguru==0.7.3",
    "patch-ng==1.19.0",
    "prompt-toolkit==3.0.52",
    "pillow==12.0.0",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "ripgrepy==2.2.0",
    "streamingjson==0.0.5",
    "textual>=0.85.0",
    "trafilatura==2.0.0",
    "tenacity==9.1.2",
    "fastmcp==2.12.5",
    "pydantic==2.12.4",
    "httpx[socks]==0.28.1",
    "redis[hiredis]>=5.0.0",
    "litellm>=1.81.0",
    "boto3>=1.35.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-cloud-aiplatform>=1.138.0",
]

[dependency-groups]
dev = [
    "inline-snapshot[black]>=0.31.1",
    "pyinstaller>=6.16.0",
    "pyright>=1.1.407",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.4",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["aesc"]
source-exclude = ["tests/**/*", "src/aesc/deps/**/*"]

[project.scripts]
aesc = "aesc.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.typos.files]
extend-exclude = ["aesc.spec", "pyinstaller.py"]

[tool.typos.default.extend-words]
datas = "datas"

[tool.pytest.ini_options]
# Avoid collecting generated artifacts and virtualenvs as tests
norecursedirs = [
    ".*",
    "build",
    "dist",
    "results",
    ".venv",
    "debug-logs",
]
markers = [
    "network: test requires live network access (deselected by default; run with `-m network`)",
]
# Exclude network-dependent tests by default so local and CI runs are deterministic.
addopts = ["-m", "not network"]
